force-app/main/default/objects/HAM_Event_Session_Attendee__c/HAM_Event_Session_Attendee__c.object-meta.xml
<CustomObject>
    <description>Tracks individual attendee registrations for specific sessions within a Cvent event.</description>
    <label>HAM Event Session Attendee</label>
    <nameField>
        <displayFormat>SA-{00000000}</displayFormat>
        <label>Session Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Session Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>