force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent event this session attendee record belongs to.</description>
    <inlineHelpText>The Cvent event this session attendee registration is associated with.</inlineHelpText>
    <label>Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>HAM Event Session Attendees</relationshipLabel>
    <relationshipName>HAM_Event_Session_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>