force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_Attendee__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent attendee registered for this session.</description>
    <inlineHelpText>The attendee who is registered for this session.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>CventEvents__Attendee__c</referenceTo>
    <relationshipLabel>HAM Event Session Attendees</relationshipLabel>
    <relationshipName>HAM_Event_Session_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>