force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_BT_Session_Attendee__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Session_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn session attendee this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn session attendee this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Session Attendee</label>
    <referenceTo>conference360__Session_Attendee__c</referenceTo>
    <relationshipLabel>HAM Event Session Attendees</relationshipLabel>
    <relationshipName>HAM_Event_Session_Attendees_BT</relationshipName>
    <type>Lookup</type>
</CustomField>