force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_BT_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Source_Id__c</fullName>
    <description>Blackthorn Session Attendee record ID used as the external ID key for idempotent migration upserts.</description>
    <externalId>true</externalId>
    <inlineHelpText>Source record ID from Blackthorn. Used to prevent duplicate records when re-running the migration batch.</inlineHelpText>
    <label>BT Source Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>