force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_Contact__c.field-meta.xml
<CustomField>
    <fullName>HAM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Salesforce Contact associated with this session attendee.</description>
    <inlineHelpText>The contact record linked to this session attendee.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Event Session Attendees</relationshipLabel>
    <relationshipName>HAM_Event_Session_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>