force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Registration_Status__c</fullName>
    <description>Registration status of the attendee for this session (e.g. Registered, Waitlisted, Cancelled).</description>
    <inlineHelpText>The attendee&apos;s current registration status for this session.</inlineHelpText>
    <label>Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>