force-app/main/default/objects/HAM_Event_Session_Attendee__c/fields/HAM_Session__c.field-meta.xml
<CustomField>
    <fullName>HAM_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the session this attendee is registered for.</description>
    <inlineHelpText>The event session this attendee registration belongs to.</inlineHelpText>
    <label>Session</label>
    <referenceTo>HAM_Event_Session__c</referenceTo>
    <relationshipLabel>HAM Event Session Attendees</relationshipLabel>
    <relationshipName>HAM_Event_Session_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>